--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hardhat": "^2.9.1"
   },
   "dependencies": {
+    "node-sass": "^7.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.6.1",
