--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.3.0",
     "big-number": "^2.0.0",
     "node-sass": "^7.0.1",
     "react": "^16.8.6",
